--- a/android/src/main/android/res/layout/similartransactionrow.xml
+++ b/android/src/main/android/res/layout/similartransactionrow.xml
@@ -6,7 +6,7 @@
     <LinearLayout android:layout_height="fill_parent" android:layout_width="wrap_content">
         <CheckBox android:id="@+id/checkbox_similartransaction" android:layout_width="wrap_content"
                   android:layout_height="wrap_content" android:layout_marginRight="6dip"
-                  android:focusable="false" android:clickable="false"></CheckBox>
+                  android:focusable="false" android:clickable="false"/>
     </LinearLayout>
     <LinearLayout android:orientation="vertical"
                   android:layout_width="0dip" android:layout_weight="1"
@@ -20,27 +20,27 @@
                           android:padding="0dip"
                           android:textStyle="bold"
                           android:textSize="15sp"
-                          style="@style/DefaultTextFont"/>
+                          android:textColor="@android:color/black"/>
                 <TextView android:id="@+id/trow_tv_amount"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="3dip"
                           android:textStyle="bold"
                           android:textSize="15sp"
                           android:gravity="right"
-                          style="@style/DefaultTextFont"/>
+                          android:textColor="@android:color/black"/>
             </TableRow>
             <TableRow>
                 <TextView android:id="@+id/trow_tv_text"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="0dip"
                           android:textSize="10sp"
-                          style="@style/DefaultTextFont"/>
+                          android:textColor="@android:color/black"/>
                 <TextView android:id="@+id/trow_tv_date"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="3dip"
                           android:textSize="10sp"
                           android:gravity="right"
-                          style="@style/DefaultTextFont"/>
+                          android:textColor="@android:color/black"/>
             </TableRow>
         </TableLayout>
 
