--- a/android/src/main/android/res/layout/transactions.xml
+++ b/android/src/main/android/res/layout/transactions.xml
@@ -16,5 +16,5 @@
     <TextView android:id="@+id/tv_transactioncount" android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               style="@style/DefaultTextFont" android:textSize="10sp" android:layout_weight="0"
-              android:gravity="center"></TextView>
+              android:gravity="center"/>
 </LinearLayout>
