--- a/android/src/main/android/res/layout/edittransaction.xml
+++ b/android/src/main/android/res/layout/edittransaction.xml
@@ -80,5 +80,6 @@
             android:background="@drawable/button_green"
             android:layout_weight="0"
             android:layout_width="fill_parent"
+            android:textStyle="bold"
             android:layout_height="wrap_content"/>
 </LinearLayout>
