Added drawables for the tabHost. Added a method that sets the drawables to the tabs and updates onTabChanged

--- a/android/src/main/android/res/layout/main.xml
+++ b/android/src/main/android/res/layout/main.xml
@@ -15,7 +15,8 @@
         <TabWidget android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
-                   android:layout_weight="0"/>
+                   android:layout_weight="0"
+                   android:tabStripEnabled="false"/>
 
     </LinearLayout>
 </TabHost>
