Use common styles

--- a/android/src/main/android/res/layout/similartransactions.xml
+++ b/android/src/main/android/res/layout/similartransactions.xml
@@ -15,7 +15,7 @@
     </LinearLayout>
     <TextView android:id="@+id/tv_similarselected" android:layout_width="fill_parent"
               android:layout_height="wrap_content"
-              style="@style/DefaultTextFont" android:textSize="10sp" android:layout_weight="0"
+              style="@style/status_fg_color" android:textSize="10sp" android:layout_weight="0"
               android:gravity="center"/>
     <Button android:text="@string/save"
             android:id="@+id/button_save_transactions" android:layout_weight="0"
