--- a/android/src/main/android/res/layout/main.xml
+++ b/android/src/main/android/res/layout/main.xml
@@ -2,7 +2,7 @@
 <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
          android:id="@android:id/tabhost" android:layout_width="fill_parent"
          android:layout_height="fill_parent">
-    <LinearLayout android:background="#303030"
+    <LinearLayout style="@style/default_bg_color"
                   android:orientation="vertical"
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent">
