--- a/android/src/main/android/res/layout/transactionrow.xml
+++ b/android/src/main/android/res/layout/transactionrow.xml
@@ -20,26 +20,26 @@
                           android:padding="0dip"
                           android:textStyle="bold"
                           android:textSize="16sp"
-                          android:textColor="#303030"/>
+                          style="@style/list_fg_color"/>
                 <TextView android:id="@+id/trow_tv_amount"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="3dip"
                           android:textSize="19sp"
                           android:gravity="right"
-                          android:textColor="#303030"/>
+                          style="@style/list_fg_color"/>
             </TableRow>
             <TableRow>
                 <TextView android:id="@+id/trow_tv_text"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="0dip"
                           android:textSize="12sp"
-                          android:textColor="#303030"/>
+                          style="@style/list_fg_color"/>
                 <TextView android:id="@+id/trow_tv_date"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="3dip"
                           android:textSize="12sp"
                           android:gravity="right"
-                          android:textColor="#303030"/>
+                          style="@style/list_fg_color"/>
             </TableRow>
         </TableLayout>
 
