--- a/android/src/main/android/res/layout/transactions.xml
+++ b/android/src/main/android/res/layout/transactions.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical" android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:background="#303030">
+              style="@style/default_bg_color">
     <LinearLayout android:layout_width="fill_parent" android:layout_weight="1"
                   android:layout_height="wrap_content">
         <ListView android:id="@id/android:list" android:layout_width="fill_parent"
@@ -14,6 +14,6 @@
     </LinearLayout>
     <TextView android:id="@+id/tv_transactioncount" android:layout_width="fill_parent"
               android:layout_height="wrap_content"
-              style="@style/DefaultTextFont" android:textSize="10sp" android:layout_weight="0"
+              style="@style/status_fg_color" android:textSize="10sp" android:layout_weight="0"
               android:gravity="center"/>
 </LinearLayout>
