--- a/android/src/main/android/res/values/styles.xml
+++ b/android/src/main/android/res/values/styles.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="DefaultTextFont">
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+    <style name="list_fg_color">
+        <item name="android:textColor">#303030</item>
+    </style>
+    <style name="status_fg_color">
         <item name="android:textColor">#FFFFFF</item>
+    </style>
+    <style name="default_bg_color">
+        <item name="android:textColor">#303030</item>
     </style>
 </resources>
