--- a/android/src/main/android/res/layout/similartransactionrow.xml
+++ b/android/src/main/android/res/layout/similartransactionrow.xml
@@ -18,29 +18,23 @@
                 <TextView android:id="@+id/trow_tv_category"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:padding="0dip"
-                          android:textStyle="bold"
-                          android:textSize="15sp"
-                          android:textColor="@android:color/black"/>
+                          style="@style/list_fg_tag"/>
                 <TextView android:id="@+id/trow_tv_amount"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="3dip"
-                          android:textStyle="bold"
-                          android:textSize="15sp"
                           android:gravity="right"
-                          android:textColor="@android:color/black"/>
+                          style="@style/list_fg_amount"/>
             </TableRow>
             <TableRow>
                 <TextView android:id="@+id/trow_tv_text"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="0dip"
-                          android:textSize="10sp"
-                          android:textColor="@android:color/black"/>
+                          style="@style/list_fg_text"/>
                 <TextView android:id="@+id/trow_tv_date"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="3dip"
-                          android:textSize="10sp"
                           android:gravity="right"
-                          android:textColor="@android:color/black"/>
+                          style="@style/list_fg_date"/>
             </TableRow>
         </TableLayout>
 
