--- a/android/src/main/android/res/layout/transactionrow.xml
+++ b/android/src/main/android/res/layout/transactionrow.xml
@@ -18,28 +18,23 @@
                 <TextView android:id="@+id/trow_tv_category"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:padding="0dip"
-                          android:textStyle="bold"
-                          android:textSize="16sp"
-                          style="@style/list_fg_color"/>
+                          style="@style/list_fg_tag"/>
                 <TextView android:id="@+id/trow_tv_amount"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="3dip"
-                          android:textSize="19sp"
                           android:gravity="right"
-                          style="@style/list_fg_color"/>
+                          style="@style/list_fg_amount"/>
             </TableRow>
             <TableRow>
                 <TextView android:id="@+id/trow_tv_text"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="0dip"
-                          android:textSize="12sp"
-                          style="@style/list_fg_color"/>
+                          style="@style/list_fg_text"/>
                 <TextView android:id="@+id/trow_tv_date"
                           android:layout_weight="1" android:layout_width="0dip"
                           android:paddingLeft="3dip"
-                          android:textSize="12sp"
                           android:gravity="right"
-                          style="@style/list_fg_color"/>
+                          style="@style/list_fg_date"/>
             </TableRow>
         </TableLayout>
 
