--- a/android/src/main/android/res/values/styles.xml
+++ b/android/src/main/android/res/values/styles.xml
@@ -3,6 +3,23 @@
     <style name="list_fg_color">
         <item name="android:textColor">#303030</item>
     </style>
+    <style name="list_fg_tag">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#303030</item>
+    </style>
+    <style name="list_fg_amount">
+        <item name="android:textSize">19sp</item>
+        <item name="android:textColor">#303030</item>
+    </style>
+    <style name="list_fg_text">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#303030</item>
+    </style>
+    <style name="list_fg_date">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#303030</item>
+    </style>
     <style name="status_fg_color">
         <item name="android:textColor">#FFFFFF</item>
     </style>
