--- a/android/src/main/android/res/layout/overview.xml
+++ b/android/src/main/android/res/layout/overview.xml
@@ -25,8 +25,7 @@
         </LinearLayout>
         <ListView android:id="@id/android:list" android:layout_weight="1" android:layout_width="0dip"
                   android:layout_height="fill_parent" android:cacheColorHint="@android:color/transparent"
-                  android:divider="#FFFFFF" android:dividerHeight="0px" android:background="@drawable/postit"
-                  android:padding="20dip"/>
+                  android:divider="@android:color/transparent" android:dividerHeight="0px"/>
     </TableLayout>
     <Button android:text="@string/new_transaction"
             android:textColor="@android:color/white"
@@ -35,5 +34,4 @@
             android:layout_width="fill_parent"
             android:textStyle="bold"
             android:layout_height="wrap_content"/>
-
 </LinearLayout>
