--- a/android/src/main/android/res/layout/overviewcategoryrow.xml
+++ b/android/src/main/android/res/layout/overviewcategoryrow.xml
@@ -4,18 +4,30 @@
               android:layout_height="wrap_content"
               android:padding="6dip"
               android:orientation="vertical">
-    <LinearLayout android:layout_height="fill_parent" android:layout_width="fill_parent"
+    <LinearLayout android:layout_height="fill_parent"
+                  android:layout_width="fill_parent"
                   android:orientation="horizontal">
-        <LinearLayout android:layout_height="fill_parent" android:layout_width="34dip">
-            <ImageView android:id="@+id/overview_imageview_category" android:layout_width="wrap_content"
+        <LinearLayout android:layout_height="fill_parent"
+                      android:layout_width="34dip">
+            <ImageView android:id="@+id/overview_imageview_category"
+                       android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="6dip"/>
         </LinearLayout>
-        <TextView android:id="@+id/overview_textview_tag" android:layout_weight="1"
-                  android:layout_width="0dip" android:layout_height="wrap_content" android:padding="3dip"
-                  android:textColor="@android:color/black" android:text="Category"/>
-        <TextView android:id="@+id/overview_textview_consumption" android:layout_weight="1"
-                  android:layout_width="0dip" android:layout_height="wrap_content" android:padding="3dip"
-                  android:textColor="@android:color/black" android:gravity="right"/>
+        <TextView android:id="@+id/overview_textview_tag"
+                  android:layout_weight="1"
+                  android:layout_width="0dip"
+                  android:layout_height="wrap_content"
+                  android:padding="3dip"
+                  android:textSize="14sp"
+                  style="@style/list_fg_color"/>
+        <TextView android:id="@+id/overview_textview_consumption"
+                  android:layout_weight="1"
+                  android:layout_width="0dip"
+                  android:layout_height="wrap_content"
+                  android:padding="3dip"
+                  android:gravity="right"
+                  android:textSize="14sp"
+                  style="@style/list_fg_color"/>
     </LinearLayout>
 </LinearLayout>
