--- a/android/src/main/android/res/layout/overview.xml
+++ b/android/src/main/android/res/layout/overview.xml
@@ -4,25 +4,31 @@
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:focusable="true" android:focusableInTouchMode="true">
+    <LinearLayout android:layout_height="70dip" android:layout_width="fill_parent"
+                  android:orientation="horizontal">
+        <Button android:id="@+id/button_overview_minus" android:layout_height="wrap_content"
+                android:layout_width="0dip" android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:background="@drawable/button_datepicker_left"
+                android:layout_margin="5dip"
+                android:layout_weight="1"/>
+        <Button android:id="@+id/button_overview_pickDate" android:layout_height="wrap_content"
+                android:layout_width="0dip"
+                android:textColor="@android:color/black" android:textStyle="bold"
+                android:background="@drawable/datepicker_button"
+                android:layout_margin="5dip"
+                android:layout_weight="5"/>
+        <Button android:id="@+id/button_overview_plus" android:layout_height="wrap_content"
+                android:layout_width="0dip" android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:background="@drawable/button_datepicker_right"
+                android:layout_weight="1"
+                android:layout_margin="5dip"/>
+    </LinearLayout>
     <TableLayout android:layout_width="fill_parent" android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:stretchColumns="1">
-        <LinearLayout android:layout_height="wrap_content" android:layout_width="0dip"
-                      android:orientation="horizontal">
-            <Button android:id="@+id/button_overview_minus" android:layout_height="wrap_content"
-                    android:layout_width="wrap_content" android:textStyle="bold"
-                    android:textColor="@android:color/white"
-                    android:text="&lt;" android:layout_weight="1"
-                    android:background="@drawable/button_blue"/>
-            <Button android:id="@+id/button_overview_pickDate" android:layout_height="wrap_content"
-                    android:layout_width="wrap_content" android:layout_weight="2"
-                    android:textColor="@android:color/white" android:textStyle="bold"
-                    android:background="@drawable/button_blue"/>
-            <Button android:id="@+id/button_overview_plus" android:layout_height="wrap_content"
-                    android:layout_width="wrap_content" android:textStyle="bold"
-                    android:text="&gt;" android:layout_weight="1" android:textColor="@android:color/white"
-                    android:background="@drawable/button_blue"/>
-        </LinearLayout>
+
         <ListView android:id="@id/android:list" android:layout_weight="1" android:layout_width="0dip"
                   android:layout_height="fill_parent" android:cacheColorHint="@android:color/transparent"
                   android:divider="#FFFFFF" android:dividerHeight="0px" android:background="@drawable/postit"
