--- a/android/src/main/android/res/layout/addtransaction.xml
+++ b/android/src/main/android/res/layout/addtransaction.xml
@@ -3,20 +3,21 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              android:background="@drawable/background4"
+              style="@style/default_bg_color"
               android:focusable="true" android:focusableInTouchMode="true">
-
+    <ImageView android:background="@drawable/bg_bar_02"
+               android:layout_height="wrap_content"
+               android:layout_width="fill_parent"/>
     <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
                   android:orientation="vertical" android:layout_weight="1">
         <TableLayout android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
-                     android:background="@drawable/postit"
                      android:padding="20dip"
                      android:stretchColumns="1">
             <TableRow>
                 <TextView android:layout_weight="1" android:layout_width="0dip"
                           android:padding="3dip"
-                          android:textStyle="bold" android:textColor="@android:color/black"
+                          android:textStyle="bold" android:textColor="@android:color/white"
                           android:layout_height="wrap_content"
                           android:text="@string/transaction_text"/>
                 <EditText android:id="@+id/edittext_text" android:layout_weight="1"
@@ -28,7 +29,7 @@
                 <TextView android:layout_weight="1" android:layout_width="0dip"
                           android:id="@+id/dateDisplay"
                           android:padding="3dip" android:textStyle="bold"
-                          android:textColor="@android:color/black"
+                          android:textColor="@android:color/white"
                           android:layout_height="wrap_content"
                           android:text="@string/transaction_date"/>
                 <Button android:id="@+id/pickDate" android:layout_weight="1"
@@ -40,7 +41,7 @@
             <TableRow>
                 <TextView android:layout_weight="1" android:layout_width="0dip"
                           android:padding="3dip"
-                          android:textStyle="bold" android:textColor="@android:color/black"
+                          android:textStyle="bold" android:textColor="@android:color/white"
                           android:layout_height="wrap_content"
                           android:text="@string/transaction_amount"/>
                 <EditText android:id="@+id/edittext_amount"
@@ -52,7 +53,7 @@
             <TableRow>
                 <TextView android:layout_weight="1" android:layout_width="0dip"
                           android:padding="3dip"
-                          android:textStyle="bold" android:textColor="@android:color/black"
+                          android:textStyle="bold" android:textColor="@android:color/white"
                           android:layout_height="wrap_content"
                           android:text="@string/category_prompt"/>
                 <Spinner android:id="@+id/spinner_category"
@@ -68,5 +69,5 @@
             android:background="@drawable/button_green"
             android:layout_width="fill_parent"
             android:textStyle="bold"
-            android:layout_height="wrap_content"/>
+            android:layout_height="50dip"/>
 </LinearLayout>
