--- a/android/src/main/android/res/layout/overview.xml
+++ b/android/src/main/android/res/layout/overview.xml
@@ -5,7 +5,8 @@
               android:orientation="vertical"
               android:focusable="true" android:focusableInTouchMode="true">
     <LinearLayout android:layout_height="70dip" android:layout_width="fill_parent"
-                  android:orientation="horizontal">
+                  android:orientation="horizontal"
+                  android:background="@drawable/bg_bar_big">
         <Button android:id="@+id/button_overview_minus" android:layout_height="wrap_content"
                 android:layout_width="0dip" android:textStyle="bold"
                 android:textColor="@android:color/white"
@@ -28,7 +29,6 @@
     <TableLayout android:layout_width="fill_parent" android:layout_weight="1"
                  android:layout_height="wrap_content"
                  android:stretchColumns="1">
-
         <ListView android:id="@id/android:list" android:layout_weight="1" android:layout_width="0dip"
                   android:layout_height="fill_parent" android:cacheColorHint="@android:color/transparent"
                   android:divider="@android:color/transparent" android:dividerHeight="0px"/>
@@ -39,5 +39,5 @@
             android:id="@+id/button_new_transaction" android:layout_weight="0"
             android:layout_width="fill_parent"
             android:textStyle="bold"
-            android:layout_height="wrap_content"/>
+            android:layout_height="50dip"/>
 </LinearLayout>
