--- a/android/src/main/android/res/layout/settings.xml
+++ b/android/src/main/android/res/layout/settings.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:background="@drawable/background4"
+              style="@style/default_bg_color"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:focusable="true" android:focusableInTouchMode="true">
+    <ImageView android:background="@drawable/bg_bar_02"
+               android:layout_height="wrap_content"
+               android:layout_width="fill_parent"/>
     <TableLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
-                 android:padding="20dip"
-                 android:background="@drawable/postit">
+                 android:padding="20dip">
         <TableRow>
             <TextView android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="0dip"
-                      android:text="@string/username" android:textStyle="bold" android:textColor="@android:color/black"
+                      android:text="@string/username" android:textStyle="bold" android:textColor="@android:color/white"
                       android:padding="3dip"/>
             <EditText android:id="@+id/et_username" android:layout_height="wrap_content"
                       android:layout_weight="1" android:layout_width="0dip"/>
@@ -24,7 +26,7 @@
             android:id="@+id/button_settings_save"
             android:layout_weight="0"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dip"
             android:textStyle="bold"
             android:textColor="@android:color/white"
             android:background="@drawable/button_green"/>
