--- a/android/src/main/android/res/layout/similartransactions.xml
+++ b/android/src/main/android/res/layout/similartransactions.xml
@@ -29,7 +29,7 @@
             android:id="@+id/button_save_transactions"
             android:layout_weight="0"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dip"
             android:textStyle="bold"
             android:textColor="@android:color/white"
             android:background="@drawable/button_green"/>
