--- a/android/src/main/android/res/layout/overview.xml
+++ b/android/src/main/android/res/layout/overview.xml
@@ -4,9 +4,9 @@
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:focusable="true" android:focusableInTouchMode="true">
-    <LinearLayout android:layout_height="70dip" android:layout_width="fill_parent"
+    <LinearLayout android:layout_height="57dip" android:layout_width="fill_parent"
                   android:orientation="horizontal"
-                  android:background="@drawable/bg_bar_big">
+                  android:background="@drawable/bg_bar_02">
         <Button android:id="@+id/button_overview_minus" android:layout_height="wrap_content"
                 android:layout_width="0dip" android:textStyle="bold"
                 android:textColor="@android:color/white"
@@ -14,7 +14,7 @@
                 android:layout_margin="5dip"
                 android:layout_weight="1"/>
         <Button android:id="@+id/button_overview_pickDate" android:layout_height="wrap_content"
-                android:layout_width="0dip"
+                android:layout_width="0dip" android:textSize="18dip"
                 android:textColor="@android:color/black" android:textStyle="bold"
                 android:background="@drawable/datepicker_button"
                 android:layout_margin="5dip"
