--- a/android/src/main/android/res/layout/settings.xml
+++ b/android/src/main/android/res/layout/settings.xml
@@ -6,9 +6,13 @@
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:focusable="true" android:focusableInTouchMode="true">
-    <ImageView android:background="@drawable/bg_bar_02"
-               android:layout_height="wrap_content"
-               android:layout_width="fill_parent"/>
+    <TextView android:background="@drawable/bg_bar_02"
+              android:layout_height="wrap_content"
+              android:layout_width="fill_parent"
+              android:gravity="center"
+              android:paddingTop="2dip"
+              android:text="@string/settings"
+              style="@style/title_text"/>
     <TableLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
