--- a/android/src/main/android/res/values/styles.xml
+++ b/android/src/main/android/res/values/styles.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="title_text">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
     <style name="list_fg_color">
         <item name="android:textColor">#303030</item>
     </style>
