--- a/android/src/main/android/res/layout/stats.xml
+++ b/android/src/main/android/res/layout/stats.xml
@@ -5,5 +5,5 @@
               android:layout_height="fill_parent">
     <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:background="@drawable/stats_01"></ImageView>
+               android:background="@drawable/stats_01"/>
 </LinearLayout>
